@@ -1,0 +1,5 @@
+package com.metaweb.gridworks.templating;
+
+public class Fragment {
+
+}
